look actual stuff

--- a/index.html
+++ b/index.html
@@ -13,10 +13,14 @@
             font-size: 30px;
         }
     </style>
-    <title>My First Web Page</title>
+    <title>Github Site!!</title>
 </head>
 <body>
-    <h1>My First Web Page</h1>
-    <p>This is my first web page.</p>
+    <!--my first website!-->
+    <div style="background-color: #000000; color: #ffffff; padding: 10px; text-align: center;">
+        <h1>William C.</h1>
+        <p>Software somethings</p>
+    </div>
+
 </body>
 </html>
