I actually use colors! Complete redesign
yippie!!

--- a/wip-old Pages/homepage.html
+++ b/wip-old Pages/homepage.html
@@ -2,6 +2,22 @@
 <html>
 <head>
     <style>
+        .unusedColorList{
+            color: #8B80F9;
+            color: #CFB1B7;
+            color: #FCAF58;
+            color: #AEE5D8;
+            color: #E85D75;
+            color: #CCDDB7;
+
+            /* cyan, blue, lime, orange, green */
+        }
+
+        .homeTemplate{
+            background-color: #A29DE1;
+            border-color: #766FCA;
+            color: #544DB3; /*link*/
+        }
         body {
             background-color: #000000;
             color: #ffffff;
