now with content!

--- a/aboutMe.html
+++ b/aboutMe.html
@@ -46,12 +46,22 @@
         </div>
 
         <div class="main-content">
-            <p>Home page</p>
+            <p>Hi! I'm William. You can find me on the following:</p>
+            <ul>
+                <li><a href="https://www.linkedin.com/in/william-capitos/">LinkedIn</a></li>
+
+                <li><a href="https://github.com/ZeroDay-Dilemma/">Github</a></li>
+
+            </ul>
+
+            <p>CS @ UMBC '26</p>
         </div>
 
         <div class="footer">
-            <p>Footer</p>
+
         </div>
+        
+        
     </div>
 </body>
 </html>
