--- a/contact.html
+++ b/contact.html
@@ -46,11 +46,11 @@
         </div>
 
         <div class="main-content">
-            <p>Home page</p>
+            <p>You can email me at: <a href="mailto:wcapito1@umbc.edu">wcapito1@umbc.edu</a></p>
         </div>
 
         <div class="footer">
-            <p>Footer</p>
+            <p></p>
         </div>
     </div>
 </body>
