--- a/home.html
+++ b/home.html
@@ -46,11 +46,11 @@
         </div>
 
         <div class="main-content">
-            <p>Home page</p>
+            <p>A Website, not completely finished, but a website nontheless. Information about me can be found on the <a>about me</a> page</p>
         </div>
 
         <div class="footer">
-            <p>Footer</p>
+            <p></p>
         </div>
     </div>
 </body>
