--- a/resume.html
+++ b/resume.html
@@ -46,11 +46,11 @@
         </div>
 
         <div class="main-content">
-            <p>Home page</p>
+            <p>Check my <a href="https://www.linkedin.com/in/william-capitos/">LinkedIn</a> for the most up-to-date info</p>
         </div>
 
         <div class="footer">
-            <p>Footer</p>
+            <p></p>
         </div>
     </div>
 </body>
