--- a/blog.html
+++ b/blog.html
@@ -44,13 +44,13 @@
             <h1>William C.</h1>
             <h2>Web design isn't my area of expertise</h2> <!--maybe make random?? that'd be cool -->
         </div>
-        
+
         <div class="main-content">
-            <p>Home page</p>
+            <p>I'll start my blogging one day I swear</p>
         </div>
 
         <div class="footer">
-            <p>Footer</p>
+            <p></p>
         </div>
     </div>
 </body>
