--- a/projects.html
+++ b/projects.html
@@ -46,11 +46,12 @@
         </div>
 
         <div class="main-content">
-            <p>Home page</p>
+            <p>Check my GitHub!</p>
+            <p><a href="https://github.com/ZeroDay-Dilemma/">GitHub</a></p>
         </div>
 
         <div class="footer">
-            <p>Footer</p>
+            <p></p>
         </div>
     </div>
 </body>
