--- a/resume.html
+++ b/resume.html
@@ -2,7 +2,7 @@
 <html class="resume" lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Home: A William C. Site</title>
+    <title>Resume: A William C. Site</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <!-- if js is added, import it here! -->
     <!-- <script src="js/file.js"></script> -->
