fixed about link

--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html class="aboutMe" lang="en">
 <head>
     <meta charset="utf-8">
-    <title>About Me: A William C. Site</title>
+    <title>About: A William C. Site</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <!-- if js is added, import it here! -->
     <!-- <script src="js/file.js"></script> -->
@@ -33,7 +33,7 @@
 
                 <li><a href="resume.html">Resume</a></li>
 
-                <li class="currPage"><a href="aboutme.html">About Me</a></li>
+                <li class="currPage"><a href="about.html">About Me</a></li>
 
                 <li><a href="contact.html">Contact</a></li>
                 
