--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,7 @@
 
                 <li><a href="resume.html">Resume</a></li>
 
-                <li><a href="aboutme.html">About Me</a></li>
+                <li><a href="about.html">About Me</a></li>
 
                 <li class="currPage"><a href="contact.html">Contact</a></li>
                 
