--- a/contact.html
+++ b/contact.html
@@ -47,6 +47,7 @@
 
         <div class="main-content">
             <p>You can email me at: <a href="mailto:wcapito1@umbc.edu">wcapito1@umbc.edu</a></p>
+            <p>Or you can call me at: (will add phone number later)</p>
         </div>
 
         <div class="footer">
