--- a/home.html
+++ b/home.html
@@ -46,7 +46,7 @@
         </div>
 
         <div class="main-content">
-            <p>A Website, not completely finished, but a website nontheless. Information about me can be found on the <a>about me</a> page</p>
+            <p>A Website, not completely finished, but a website nontheless. Information about me can be found on the <a href="about.html">about me</a> page</p>
         </div>
 
         <div class="footer">
