--- a/dog_points.html
+++ b/dog_points.html
@@ -121,11 +121,11 @@
         
         WB = runAgainstSchedule(division,classBitches,FEMALE_DOGS);
 
-        //colorMajorsRed(document.getElementById('WD_TD'),WD);
-        //colorMajorsRed(document.getElementById('WB_TD'),WB);
+        colorMajorsRed(document.getElementById('WD_TD'),WD);
+        colorMajorsRed(document.getElementById('WB_TD'),WB);
 
-        document.getElementById('WD_TD').textContent = WD;
-        document.getElementById('WB_TD').textContent = WB;
+        //document.getElementById('WD_TD').textContent = WD;
+        //document.getElementById('WB_TD').textContent = WB;
         // console.log(runAgainstSchedule(division,classDogs,1))
         // console.log(runAgainstSchedule(division,classBitches,2));
       }
