--- a/dog_points.html
+++ b/dog_points.html
@@ -2,7 +2,7 @@
 <!-- DONE TODO add clear button -->
 <!-- DONE TODO color majors distinctly -->
 <!-- TODO explanation for how the calcuation is done-->
-<!-- TODO display the input in 1 line above the results (for screenshots)-->
+<!-- DONE TODO display the input in 1 line above the results (for screenshots)-->
 <html>
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
@@ -642,8 +642,8 @@
         */
     </style>
 </head>
-<!-- <body> -->
-<body onload="debug_InsertRandomNumbers()"> <!-- for debug -->
+<body>
+<!-- <body onload="debug_InsertRandomNumbers()"> --> <!-- for debug -->
   <div class="header">AKC Point Schedule Calculator</div>
   <div class="subheader">Only $5 to add your breed!</div>
   <table>
