--- a/dog_points.html
+++ b/dog_points.html
@@ -3,6 +3,7 @@
 <!-- DONE TODO color majors distinctly -->
 <!-- TODO explanation for how the calcuation is done-->
 <!-- DONE TODO display the input in 1 line above the results (for screenshots)-->
+<!-- if BoB you instantly become BoW clarify in popup-->
 <html>
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
@@ -580,6 +581,11 @@
       border-radius: 4px;
       cursor: pointer;
     }
+    /* #misc-page-bottom-menu {
+      display: block;
+      text-align: center;
+      margin: 5px 5px;
+    } */
 
     #small-input-display-div{
       display: block;
@@ -596,6 +602,8 @@
     #clear-button{
       background-color: #f44336;
     }
+
+    .st4{fill:none;stroke:#000000;stroke-miterlimit:10;}
     /* .dogNumberInput{
 
     } */
@@ -643,6 +651,43 @@
     </style>
 </head>
 <body>
+
+
+<div hidden="true" style="width:36px;height:36px;border:1px solid #ff0000">
+<svg x="0px" y="0px" viewBox="0 0 137 137" style="border:1px solid; enable-background:new 0 0 137 137;" xml:space="preserve">
+<g>
+	<path fill="#00" class="st0" d="M84.9,62.57c-3.85,10.12-7.7,20.25-11.55,30.38c-1.44,3.62-4.81,9.16-3.71,13.12
+		c5.82,4.88,17.1-17.44,19.25-11.27c2.23,2.02-4.3,8.39-5.7,9.84c-6.23,6.23-13.9,12.12-23.82,14.55c-5.78,1.42-12.2,0.33-14.4-3.57
+		c-2.06-3.64-0.34-10.37,0.71-13.83C49.01,90.85,53.71,81,57.95,70.7c1.3-3.16,6.21-11.82,3.71-13.69
+		c-6.31-2.6-15.37,15.48-18.97,12.98c-4.63-4.06,15.3-20.15,21.11-21.39C70.65,46.83,90.55,40.77,84.9,62.57z"/>
+	<path fill="#00" class="st0" d="M69.93,36.76c-9.51-12.37,8.58-25.6,19.11-16.54C99.15,32.3,81.03,47.38,69.93,36.76z"/>
+</g>
+<circle fill="none" stroke="#000000" style="stroke-width:7" class="st1" cx="68.5" cy="68.5" r="65"/>
+</svg>
+</div>
+
+<div hidden="true" style="width:60px;height:42px;" onclick="myFunction(this)">
+  <svg class="thatSVG"  x="0px" y="0px" viewBox="0 0 60 42"  xml:space="preserve">
+  
+  <g id="Layer_1">
+    <line class="st4" x1="17.4" y1="10.49" x2="23.31" y2="0.25"/>
+    <line class="st4" x1="23.16" y1="0.25" x2="29.07" y2="10.49"/>
+    <line class="st4" x1="30.66" y1="10.45" x2="36.26" y2="0.75"/>
+    <line class="st4" x1="36.1" y1="0.75" x2="41.65" y2="10.35"/>
+  </g>
+  <g id="Layer_2">
+    <line class="st4" x1="0.43" y1="39.88" x2="17.75" y2="9.88"/>
+    <line class="st4" x1="29.07" y1="10.49" x2="44.61" y2="10.06"/>
+    <line class="st4" x1="44.29" y1="9.88" x2="47.82" y2="16"/>
+    <line class="st4" x1="47.36" y1="15.89" x2="59.45" y2="15.89"/>
+    <line class="st4" x1="52.85" y1="27.33" x2="59.45" y2="15.89"/>
+    <line class="st4" x1="27.42" y1="26.9" x2="52.85" y2="27.33"/>
+    <line class="st4" x1="24.29" y1="42.09" x2="33.07" y2="26.88"/>
+  </g>
+  </svg>
+  </div>
+
+
 <!-- <body onload="debug_InsertRandomNumbers()"> --> <!-- for debug -->
   <div class="header">AKC Point Schedule Calculator</div>
   <div class="subheader">Only $5 to add your breed!</div>
@@ -682,7 +727,6 @@
     <button id="clear-button" onclick="clearEnteredNumbers()">Clear</button>
     <button id="generate-button" onclick="generate()">Calculate</button>
   </div>
-  
   <br>
   <div id="small-input-display-div" hidden="true">
     <p id="small-input-display-p"></p>
@@ -764,5 +808,11 @@
       </tr>
     </tbody>
   </table>
+
+  <!-- <div id="misc-page-bottom-menu">
+    <button >About Me</button>
+    <button> </button>
+
+  </div> -->
 </body>
 </html>
