legal team said we had to

--- a/dog_points.html
+++ b/dog_points.html
@@ -895,7 +895,7 @@
       </g>
     </svg>  
     </div>
-    <div>AKC Point Calculator</div>
+    <div>Will's Nifty Calculator</div>
   </div>
   <div class="subheader">Only $5 to add your breed!</div>
   <table id="input-table">
