--- a/dog_points.html
+++ b/dog_points.html
@@ -76,6 +76,8 @@
         document.getElementById('classBitchesInput').value = '';
         document.getElementById('championDogsInput').value = '';
         document.getElementById('championBitchesInput').value = '';
+        document.getElementById('points-table').hidden=true;
+        document.getElementById('small-input-display-p').innerText="";
       }
 
 
