--- a/dog_points.html
+++ b/dog_points.html
@@ -1078,7 +1078,7 @@
       </svg>  
     </div>
   </div>
-  <div class="subheader">Only $5 to add your breed!</div>
+  <div class="subheader">Only 3 easy payments of <span style="font-weight: bold">$4.99</span> to add your breed!</div>
   <table id="input-table">
     <tr>
       <th>Division</th>
