--- a/dog_points.html
+++ b/dog_points.html
@@ -5,6 +5,7 @@
 <!-- DONE TODO display the input in 1 line above the results (for screenshots)-->
 <!-- if BoB you instantly become BoW clarify in popup-->
 
+<!--TODO add more colors-->
 
 
 <!-- PREVIOUSLY INCORRECT BoB Calculation!!! -->
