Mid-Afternoon Build 0.8.2
Finished filling out the point calculation guide.

--- a/dog_points.html
+++ b/dog_points.html
@@ -969,57 +969,57 @@
           <td>Winners Dog & Winners Bitch</td>
         </tr>
         <tr>
-          <td>Count the number of dogs of the gender in question. Use this number and refer to the Points Schedule</td>
+          <td>Count the number of dogs of the gender in question. Use this number and refer to the Points Schedule.</td>
           
         </tr>
         <tr>
           <td>Best of Winners</td>
         </tr>
         <tr>
-          <td></td>
+          <td>Calculate the points for WD and WB, and award BoW the higher of the two. If WD and WB both earn 0 points, BoW will get 1 point.</td>
         </tr>
         <tr>
           <td>WD/WB is Best of Winners (WB/WD is BoS)</td>
         </tr>
         <tr>
-          <td></td>
+          <td>If BoS would recieve more points than BoW, BoW would also be awarded that number of points. Otherwise, no change.</td>
         </tr>
         <tr>
           <td>WD/WB is Best of Opposite</td>
         </tr>
         <tr>
-          <td></td>
+          <td>Count the number of Class and Champions of the dogs sex. Use this number and refer to the Points Schedule.</td>
         </tr>
         <tr>
           <td>WD/WB is Best of Opposite and BoW</td>
         </tr>
         <tr>
-          <td></td>
+          <td>If WD/WB would recieve more points than BoS, BoW would also be awarded that number of points. Otherwise, no change.</td>
         </tr>
         <tr>
           <td>WD/WB is Best of Breed</td>
         </tr>
         <tr>
-          <td></td>
+          <td>Count the number of Class dogs of your sex, and all Champion dogs. Use this number and refer to the Points Schedule.</td>
         </tr>
         <tr>
           <td>Champion is Best of Breed</td>
         </tr>
         <tr>
-          <td></td>
+          <td>Count the number of all Class dogs and all Champion dogs. Use this number and refer to the Points Schedule.</td>
         </tr>
         <tr>
           <td>WD/WB is BoB and WB/WD is BoS</td>
         </tr>
         <tr>
-          <td></td>
+          <td>If BoS would recieve more points than BoB, BoB would also be awarded that number of points. This is because when a Class dog is BoB, it is automatically BoW. Otherwise, no change.</td>
         </tr>
         <tr>
           <td>Select Dog/Bitch</td>
 
         </tr>
         <tr>
-          <td></td>
+          <td>Count the number of Class dogs of your sex, and all Champion dogs of your sex. Then, substract 1 from the resulting number. Use this number and refer to the Points Schedule.</td>
         </tr>
       </tbody>
     </table>
