Updated Text for point logic

--- a/dog_points_dev.html
+++ b/dog_points_dev.html
@@ -1037,7 +1037,7 @@
           <td>Best of Winners</td>
         </tr>
         <tr>
-          <td>Calculate the points for WD and WB, and award BoW the higher of the two. If WD and WB both earn 0 points, BoW will get 1 point.</td>
+          <td>Calculate the points for WD and WB, and award BoW the higher of the two. If WD and WB both earn 0 points, BoW will get 1 point, should the sum of both classes be enough for 1 point based on the Points Schedule.</td>
         </tr>
         <tr>
           <td>WD/WB is Best of Winners (WB/WD is BoS)</td>
