--- a/dog_points.html
+++ b/dog_points.html
@@ -982,6 +982,7 @@
 
       </tbody>
       </table> 
+      <p style="font-size:11px; text-align:center">v. 11.14</p>
     </div>
   </div>
 
@@ -1047,6 +1048,7 @@
           <td>Count the number of Class dogs of your sex, and all Champion dogs of your sex. Then, substract 1 from the resulting number. Use this number and refer to the Points Schedule.</td>
         </tr>
       </tbody>
+      
     </table>
 
 
