--- a/dog_points.html
+++ b/dog_points.html
@@ -26,7 +26,9 @@
 
       const points = [0, 1, 2, 3, 4, 5]; // Categories for sex = 1
         
+      //look in py projects for the converter tool
       const samoyed_schedule = [
+        /* 2023 data
         //male
         [
           [0, 0, 0, 0, 0, 0],  // division 1 N/A
@@ -45,6 +47,26 @@
           [0, 2, 4, 6, 7, 9],    //division 4 female
           [0, 2, 5, 8, 10, 13],   //division 5 female
           [0, 2, 8, 13, 15, 19]  //Division 6 female
+        ]
+        */
+        //male
+        [
+          [0, 0, 0, 0, 0, 0],  // division 1 N/A
+          [0, 2, 4, 5, 8, 13],  // division 2 male
+          [0, 2, 3, 4, 6, 9],  // division 3 male
+          [0, 2, 3, 4, 5, 7], // division 4 male
+          [0, 2, 4, 5, 6, 9],   // division 5 male
+          [0, 2, 3, 4, 5, 7]   //division 6 male
+        ],
+        // const samoyed_schedule_female=
+        // female
+        [
+          [0, 0, 0, 0, 0, 0],    // division 1 N/A
+          [0, 2, 6, 10, 13, 18],    // division 2 female
+          [0, 2, 5, 8, 11, 17], //divison 3 female
+          [0, 2, 3, 4, 5, 7],    //division 4 female
+          [0, 2, 4, 6, 8, 13],   //division 5 female
+          [0, 2, 7, 12, 15, 21]  //Division 6 female
         ]
       ];
       let division;
