--- a/radio_listener.html
+++ b/radio_listener.html
@@ -580,7 +580,7 @@
   </div>
   <footer class="footer">
     <p><input id="startTimerButton" type="button" value="&copy;" style="display: none;"> this is unoffical. In no way
-      affilated with UMBC nor WMBC</p>
+      affilated with UMBC nor WMBC. made by will :3</p>
   </footer>
 </body>
 <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
