--- a/schedulePage.html
+++ b/schedulePage.html
@@ -441,6 +441,10 @@
             showName = "Ebbs & Flows";
             console.log("jenny handled");
         }
+        else if(showName === "Ranting %26 Raving"){
+            showName = "Ranting & Raving";
+            console.log("other person handled");
+        }
         const encryptedHostNames = show.hostNames;
         console.log(encryptedHostNames);
         const standardShow = show.standardShow;
