updated footer to be more accurate
expect more bug fixes ASAP i see an issue rn

--- a/baseDJPage.html
+++ b/baseDJPage.html
@@ -532,10 +532,9 @@ console.log(showName + " is the show name 1");
   </div>
 
 
+  
   <footer class="footer">
-    <p style>&copy; this is unoffical. In no
-      way
-      affilated with UMBC nor WMBC. made by will :3</p>
+    <p style>WMBC's Web Player, made by will :3</p>
   </footer>
 </body>
 
