--- a/radio_listener.html
+++ b/radio_listener.html
@@ -260,14 +260,6 @@
       border-bottom: none;
     }
 
-    footer {
-      text-align: center;
-      padding: 5px;
-      position: fixed;
-      bottom: 0;
-      width: 100%;
-    }
-
     .radioplayer {
       background: var(--Dark-Gray);
       padding: 20px;
@@ -397,12 +389,7 @@
       text-decoration: underline;
     }
 
-    .footer p {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      gap: 5px;
-    }
+
   </style>
   <script> const STATION_ID = "s7a5fb9da6"; </script>
   <script>
@@ -579,8 +566,7 @@
     </div>
   </div>
   <footer class="footer">
-    <p><input id="startTimerButton" type="button" value="&copy;" style="display: none;"> this is unoffical. In no way
-      affilated with UMBC nor WMBC. made by will :3</p>
+    <p><input id="startTimerButton" type="button" value="WMBC's Web Player," style="display: none;"> made by will :3</p>
   </footer>
 </body>
 <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
