--- a/schedulePage.html
+++ b/schedulePage.html
@@ -370,7 +370,7 @@
     </table>
   </div>
   <footer class="footer">
-    <p>&copy; this is unofficial. In no way affiliated with UMBC nor WMBC. made by will :3</p>
+    <p style>WMBC's Web Player, made by will :3</p>
   </footer>
 
   <script>
