--- a/schedulePage.html
+++ b/schedulePage.html
@@ -112,8 +112,11 @@
       height: 100%;
       position: absolute;
       padding: 4px;
+      padding-left:1px;
+      padding-right:1px;
       border-radius: 4px;
       position: absolute;
+
       top: 0;
       left: 0;
       width: 100%;
