made text bigger, and button cooler
jfjfjfkjfjfjfjfjfjiefjnsfojhdfszjnzgf

--- a/radio_listener.html
+++ b/radio_listener.html
@@ -14,6 +14,7 @@
     [class*="fontawesome-"]:before {
       font-family: 'FontAwesome', sans-serif;
     }
+    
 
     :root {
       --Black: #000000;
@@ -38,7 +39,10 @@
         gap: 10px;
         padding: 15px;
       }
-
+      .radioco-information{
+        padding:0px !important;
+        float:none;
+      }
       .logo-circle {
         width: 60px;
         height: 60px;
@@ -212,6 +216,19 @@
       height: auto;
     }
 
+    .radioco-image{
+      float:left;
+    }
+
+    
+    .radioco-information{
+      float:left;
+      padding-right:20%;
+    }
+    .radioco-bg{
+      visibility: hidden;
+    }
+
     header h1 {
       margin: 0;
       font-size: 24px;
@@ -330,6 +347,10 @@
       outline: 0;
     }
 
+    .radioco-information{
+      font-size: 20px;
+      font-weight: bold;
+    } 
     .radioco-playButton {
       font-size: 40px;
     }
