--- a/radio_listener.html
+++ b/radio_listener.html
@@ -118,6 +118,7 @@
       .radioco-playButton {
         font-size: 40px;
         margin-bottom: 10px;
+        margin-top: -10px;
       }
 
       .radioco-information {
@@ -333,7 +334,7 @@
     .radioco-information input[type=range]::-webkit-slider-thumb {
       background: var(--Gold);
     }
-
+    
     .radioco-information input[type="range"] {
       background: rgba(255, 255, 255, 0.3);
       width: 100px;
@@ -348,6 +349,7 @@
     }
 
     .radioco-information{
+      margin-top: -20px;
       font-size: 20px;
       font-weight: bold;
     } 
