--- a/radio_listener.html
+++ b/radio_listener.html
@@ -390,7 +390,9 @@
     .information input[type=range]:focus {
       outline: 0;
     }
-
+    .radioco-information{
+      max-width:100%;
+    }
     .radioco-elapsedTime {
       opacity: 0.4;
       font-size: 14px;
